--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -2,70 +2,109 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #0A2342; /* Deep ocean blue */
-    color: #E0F2F1; /* Soft moonlight white */
+    background-color: #0A2342;
+    /* Deep ocean blue */
+    color: #E0F2F1;
+    /* Soft moonlight white */
 }
 
-h1, h2, h3 {
-    color: #5C7AEA; /* Soft moonlight blue for headings */
+h1,
+h2,
+h3 {
+    color: #5C7AEA;
+    /* Soft moonlight blue for headings */
 }
 
-textarea, select, button {
+.checkbox-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    /* Creates two columns */
+    gap: 10px;
+    /* Adjusts the space between grid items */
+}
+
+textarea,
+select,
+button {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
-    border: 1px solid #274156; /* Dark sandy border */
-    background-color: #274156; /* Dark sandy elements background */
-    color: #E0F2F1; /* Soft moonlight white */
+    border: 1px solid #274156;
+    /* Dark sandy border */
+    background-color: #274156;
+    /* Dark sandy elements background */
+    color: #E0F2F1;
+    /* Soft moonlight white */
     border-radius: 5px;
 }
 
 button {
-    background-color: #4A90E2; /* Cool night sky blue for buttons */
+    background-color: #4A90E2;
+    /* Cool night sky blue for buttons */
     cursor: pointer;
 }
 
 button:hover {
-    background-color: #3D70AC; /* Darker shade of night sky blue for button hover */
+    background-color: #3D70AC;
+    /* Darker shade of night sky blue for button hover */
 }
 
-html, body {
+html,
+body {
     height: 100%;
-    margin: 0; /* Remove default margin */
-    overflow: hidden; /* Prevent scrolling on the body directly */
+    margin: 0;
+    /* Remove default margin */
+    overflow: hidden;
+    /* Prevent scrolling on the body directly */
 }
 
 #convertForm {
     height: 90vh;
-    overflow: auto; /* Allows scrolling within the form if content overflows */
-    box-sizing: border-box; /* Include padding and border in the element's total dimensions */
+    overflow: auto;
+    /* Allows scrolling within the form if content overflows */
+    box-sizing: border-box;
+    /* Include padding and border in the element's total dimensions */
 }
 
 .content-container {
     display: flex;
     flex-direction: column;
     padding: 20px;
-    max-height: 80%; /* Ensure it doesn't exceed the form's height */
-    box-sizing: border-box; /* Include padding in the height calculation */
+    max-height: 80%;
+    /* Ensure it doesn't exceed the form's height */
+    box-sizing: border-box;
+    /* Include padding in the height calculation */
 }
 
-.input-container, .output-container {
+.input-container,
+.output-container {
     flex: 1;
     display: flex;
-    overflow: hidden; /* Prevent these containers from expanding beyond their allocated space */
-    box-sizing: border-box; /* Include padding and border */
+    overflow: hidden;
+    /* Prevent these containers from expanding beyond their allocated space */
+    box-sizing: border-box;
+    /* Include padding and border */
     flex-direction: column;
-    padding: 10px; /* Adjust padding as needed */
-    height: 100%; /* Ensure the container takes up the desired space */
+    padding: 10px;
+    /* Adjust padding as needed */
+    height: 100%;
+    /* Ensure the container takes up the desired space */
 }
 
-#inputData, #outputData {
-    width: 100%; /* Make textarea take up all available width */
-    height: 100%; /* Make textarea take up all available height */
-    box-sizing: border-box; /* Include padding and border in the element's total dimensions */
-    margin: 0; /* Remove default margin */
-    resize: none; /* Optional: Prevent resizing */
+#inputData,
+#outputData {
+    width: 100%;
+    /* Make textarea take up all available width */
+    height: 100%;
+    /* Make textarea take up all available height */
+    box-sizing: border-box;
+    /* Include padding and border in the element's total dimensions */
+    margin: 0;
+    /* Remove default margin */
+    resize: none;
+    /* Optional: Prevent resizing */
 }
+
 .select-container {
     width: 100%;
 }
@@ -74,8 +113,10 @@ html, body {
 @media (min-width: 768px) {
     .content-container {
         flex-direction: row;
-        height: 75vh; /* Adjusted for desktop */
+        height: 75vh;
+        /* Adjusted for desktop */
     }
+
     .select-container {
         width: 50%;
     }
@@ -83,7 +124,11 @@ html, body {
 
 /* Responsive styles for narrow screens */
 @media (max-width: 767px) {
-    textarea, select, button {
-        min-height: 200px; /* Increase height for better usability on narrow screens */
+
+    textarea,
+    select,
+    button {
+        min-height: 200px;
+        /* Increase height for better usability on narrow screens */
     }
 }
